--- a/src/app/view/view.component.html
+++ b/src/app/view/view.component.html
@@ -1,6 +1,6 @@
 <div class="view">
   <figure>
-    <img src="./../../assets/images/recipes/r1.JPG"/>
+    <img id="cover" src="./../../assets/images/recipes/r1.JPG"/>
     <figcaption>
       <small>Main Dish</small>
       <h2>Chicken sukka - Kori, Best recipe to be tried once</h2>
