--- a/src/app/sidemenu/sidemenu.component.scss
+++ b/src/app/sidemenu/sidemenu.component.scss
@@ -1,25 +1,26 @@
 @import "../../assets/scss/styles";
 aside{
   position: fixed;
-  background: rgba($black, .8);
   height: 100%;
-  width: 100%;
+  width: 0%;
   top: 0px;
   z-index: 2;
   overflow: hidden;
+  @include animate(width);
   .close{
     width: 20%;
     height: 100%;
     background: transparent;
     float: right;
     cursor: pointer;
+    @include animate(background,1s);
   }
   >div{
     margin: 0px;
     width: 80%;
     background: $white;
     height: 100%;
-    white-space: nowrap;
+
     .banner{
       height: 150px;
       width: 100.1%;
@@ -36,12 +37,16 @@ aside{
         margin: 0px;
         color: $white;
         font-weight: normal;
+        white-space: nowrap;
+        overflow: hidden;
       }
     }
 
     ul {
       margin: 10px 0px;
       padding: 0px;
+      white-space: nowrap;
+      overflow: hidden;
       li{
         list-style: none;
 
@@ -59,6 +64,8 @@ aside{
           display: block;
           font-size: 17px;
           padding: 15px 20px;
+          color: $primary-text-color;
+          text-decoration: none;
         }
       }
 
