--- a/src/app/view/view.component.scss
+++ b/src/app/view/view.component.scss
@@ -100,7 +100,7 @@
         line-height: 24px;
         font-size: 14px;
         color: $primary-text-color;
-        padding: 10px;
+        padding: 5px 10px;
         &:last-child{
           margin-bottom: 0px;
         }
