--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,3 +1,7 @@
+
+<figure class="avatar">
+  <img src="../../assets/images/icons/icon-72x72.png" />
+</figure>
 <section class="signin">
   <div>
     <input type="text" placeholder="Username"/>
